# SberQR-Parser

./: README.md  main.py  pyproject.toml
