[tool.poetry]
name = "sbpqrc"
version = "0.1.0"
description = "Parser QR code from page"
authors = ["devnull <voranasyerdnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.2.0"
svglib = "^1.3.0"
argparse = "^1.4.0"
loguru = "^0.6.0"
xvfbwrapper = "^0.2.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
